# QuantStream-Analytics-Platform

./: .env.example  .gitignore  Dockerfile  HANDOFF.rst  QUICKSTART.md  README.md  README_DASHBOARD.md  SETUP.md  docker-compose.yml  prd.md  pyproject.toml  pytest.ini  railway.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.interface-design/: system.md
.taskmaster/: state.json
.taskmaster/docs/: feature-store-prd.txt  prd.txt
.taskmaster/tasks/: tasks.json
config/: config.yaml  prometheus.yml
config/dashboard/: config.yaml
config/etl/: streaming_config.yaml
config/features/: feature_store_config.yaml  indicators_catalog.yaml
config/ml/: feature_configs.yaml  inference_configs.yaml  model_configs.yaml  training_configs.yaml
config/monitoring/: alert_rules.yml  prometheus.yml
config/terraform/: backend.tf  locals.tf  outputs.tf  providers.tf  variables.tf  versions.tf
docs/: etl_pipeline_overview.md
docs/plans/: 2026-02-19-end-to-end-integration-design.py
examples/: basic_pipeline.py  docker-compose.yml  feature_store_example.py
infrastructure/: README.md
infrastructure/environments/dev/: main.tf  outputs.tf  variables.tf
infrastructure/modules/compute/: autoscaling.tf  main.tf  outputs.tf  variables.tf
infrastructure/modules/data/: main.tf  outputs.tf  variables.tf
infrastructure/modules/networking/: main.tf  outputs.tf  security-groups.tf  variables.tf
infrastructure/scripts/deployment/: deploy.sh
infrastructure/scripts/maintenance/: health-check.sh
infrastructure/shared/common-resources/: main.tf  outputs.tf  variables.tf
monitoring/: alert_rules.yml  health_check.py  prometheus.yml  recording_rules.yml  setup_monitoring.sh
monitoring/grafana/dashboards/: dashboard.yml  quantstream-overview.json
monitoring/grafana/datasources/: prometheus.yml
scripts/: dev-session.sh  quick_start.sh  railway-setup.sh  setup.sh
scripts/sql/: init.sql
src/: __init__.py
src/dashboard/: app.py
src/dashboard/backend/: __init__.py
src/dashboard/frontend-next/: Dockerfile  next.config.ts  package-lock.json  package.json  railway.toml  wrangler.toml
src/etl/: main.py  pipeline_orchestrator.py
src/etl/quality/: __init__.py  data_quality_checker.py
src/etl/streaming/: __init__.py  anomaly_detection.py  base_streaming_job.py  bronze_layer.py  gold_layer.py  silver_layer.py  technical_indicators.py
src/etl/transformations/: __init__.py  data_cleaner.py  data_validation.py
src/etl/utils/: __init__.py  schema_registry.py
src/features/: README.md
src/features/indicators/: __init__.py  feature_indicators.py
src/features/ml_integration/: __init__.py  model_integration.py
src/features/monitoring/: __init__.py  drift_detector.py
src/features/serving/: __init__.py  api_models.py  endpoints.py  feature_server.py
src/features/store/: __init__.py  feature_metadata.py  feature_registry.py  feature_store.py  lineage_tracker.py  storage_backend.py
src/features/utils/: __init__.py  feature_validator.py  performance_monitor.py
src/ingestion/: __init__.py
src/ingestion/connectors/: __init__.py  base_connector.py  csv_file_connector.py  rest_api_connector.py  websocket_connector.py
src/ingestion/models/: __init__.py  market_data.py  schemas.py  validation.py
src/ingestion/processors/: __init__.py  data_processor.py  kafka_producer.py  pipeline_manager.py
src/ingestion/utils/: __init__.py  config_loader.py  logger.py  metrics.py  rate_limiter.py  retry_handler.py
src/ml/: __init__.py
src/ml/features/: __init__.py  statistical_features.py  technical_indicators.py
src/ml/inference/: __init__.py  engine.py
src/ml/models/: __init__.py  base_model.py
src/ml/monitoring/: __init__.py
src/ml/training/: __init__.py  evaluation.py  trainer.py
src/ml/utils/: __init__.py  data_utils.py  metrics.py  mlflow_utils.py  model_utils.py
src/monitoring/prometheus/: metrics_collector.py
tests/etl/: __init__.py  test_streaming_jobs.py
tests/features/: __init__.py  test_feature_store.py
tests/ingestion/unit/: test_models.py  (+3 more)
tests/ml/: __init__.py
(+80 files in other folders)
